# a64dbg

./: .gitignore  CMakeLists.txt  Makefile  README.md  notes.md  syscallents_arm.h
plugins/: CMakeLists.txt  close_plugin.cpp  faccessat_plugin.cpp  fstatat_plugin.cpp  open_plugin.cpp  openat_plugin.cpp  read_plugin.cpp  template_plugin.cpp
src/: a64dbg.cpp
src/include/: CmdParser.h  Connector.h  Utils.h  pmparser.h
src/include/Plugins/: PUtils.h  Plugins.h
src/include/Utils/: Memory.h  Utils.h  mem_checker.h
src/include/aarch64/: Syscalls.h
src/src/: CmdParser.cpp  Connector.cpp  Utils.cpp  pmparser.c
src/src/Plugins/: PUtils.cpp  Plugins.cpp
src/src/Utils/: Memory.cpp  Utils.cpp  mem_checker.c  pmparser.c
tests/CppBinaries/: CMakeLists.txt  Makefile  loop_test.cpp  main.cpp  readfile.cpp
tests/RustBinaries/: Cargo.toml
tests/RustBinaries/.cargo/: config
tests/RustBinaries/src/: main.rs
